[package]
name = "vitalibc"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
edition = "2018"
license = "MIT"
description = "A minimal `libc` for Rust using the kernel PS Vita functions"
repository = "https://github.com/vita-rust/vitalibc"
readme = "README.md"
keywords = ["ps-vita", "psp2"]
categories = ["no-std", "hardware-support", "os"]

[package.metadata.docs.rs]
features = ["psp2-sys/dox"]

[dependencies]
psp2-sys = "^0.2"

[lib]
name = "vitalibc"
path = "src/lib.rs"

[badges]
travis-ci   = { repository = "vita-rust/vitalibc" }
maintenance = { status = "actively-developed" }
